site second build
site second build

--- a/contact.html
+++ b/contact.html
@@ -45,18 +45,20 @@
           <section id="contactme">
             <div class="control-group">
               <div class="controls">
-                <div class="input-prepend">
-                  <span class="add-on"><i class="icon-envelope"></i></span>
-                  <input class="span4" id="inputIcon" type="text" value="vtsnaathan [at] gmail [dot] com" readonly="disabled">
-                </div>
-                <div class="input-prepend">
-                  <span class="add-on"><i class="icon-envelope"></i></span>
-                  <input class="span4" id="inputIcon" type="text" value="s [dot] thayumanan [at] ufl [dot] edu" readonly="disabled">
-                </div>
-                <div class="input-prepend">
-                  <span class="add-on"><i class="icon-signal"></i></span>
-                  <input class="span4" id="inputIcon" type="text" value="+91 895-191-3678" readonly="disabled">
-                </div>
+                <table class="table table-bordered table-hover">
+                  <tr>
+                    <th>Contact</th>
+                  </tr>
+                  <tr>
+                    <td>vtsnaathan [@] gmail [.] com</td> <td><a href="mailto:vtsnaathan@gmail.com" target="_blank"><i class="icon-envelope"></i></a></td>
+                  </tr>
+                  <tr>
+                    <td>s.thayumanan [@] ufl [.] edu </td> <td><a href="mailto:s.thayumanan@ufl.edu" target="_blank"><i class="icon-envelope"></i></a></td>
+                  </tr>
+                  <tr>
+                    <td>+91-895 191 3678</td> <td><i class="icon-signal"></i></td>
+                  </tr>
+                </table>
                 <table class="table table-bordered table-hover">
                   <tr>
                     <th><i class="icon-home"></i> Address</th>
