site third build
site third build

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                 <a href="http://www.ece.ufl.edu/" target="_blank"><b>Electrical and Computer Engineering</b></a><br>
                 <a href="http://www.ufl.edu/" target="_blank">University of Florida, Gainesville</a><br>
               </p> 
-			  <h5>Research interests</h5>
+			  
+			  <br>
+			  
+			  <h4>Research interests</h4>
               <p>My primary interest is in the field of <strong><a href="http://www.ece.ufl.edu/computerengineering" target="_blank">Computer Engineering</a></strong>, i.e., Computer Systems Design, Embedded Systems, Reconfigurable Architectures and Parallel Computing.</p>
                 <table class="table table-bordered table-hover">
                   <tr>
@@ -76,7 +79,7 @@
                     <td>Online version</td> <td><a href="resume.html"><i class="icon-list-alt"></i></a></td>
                   </tr>
 				  <tr>
-					<td>PDF version</td> <td><object width="400" height="400" data="files/Sattanaathan_Thayumanan_Resume.pdf"></object></td>
+					<td>PDF version</td> <td><a href="files/Sattanaathan_Thayumanan_Resume.pdf" download>Download the pdf</a></object></td>
 				  </tr>
                   <!-- <tr>
                     <td>Downloadable version</td> <td><a href="SiddharthSwaminathan-Resume.pdf"><i class="icon-file"></i></a></td>
