site fourth build
site fourth build

--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
 			<h5>Texas Instruments Innovation Challenge India Design Contest 2015</h5>
             <p>Top 86 semi-finalist from 1209 teams <a href= "http://e2e.ti.com/group/universityprogram/w/contests/2436.contest-winners.aspx"> Semi-finalist, Texas Instruments Innovation Challenge India Design Contest 2015 </a> among over 1200 participating teams from all over the country competing in various fields and technologies of Electronics</p>
              <div class="row">
-              <div class="span5"><img src="img/TIICIDC.jpg" class="img-rounded"/></div>
+              <div class="span5"><img src="img/ti.JPG" class="img-rounded"/></div>
               </div>
               <div class="row">
               <div class="span5">
@@ -101,27 +101,33 @@
             <h3>Technical Skills</h3>
             <table class="table table-bordered table-hover">
               <tr>
-                <th>Languages</th> <td>JAVA, C, C++,<a href="http://www.mathworks.in/products/matlab/">MATLAB</a>, Embedded C, C#, <a href="https://www.lua.org/">Lua</a>, Visual Basics (VBA)</td>
+                <th>Languages</th> <td>JAVA, C, C++,<a href="http://www.mathworks.in/products/matlab/">MATLAB</a>, Embedded C, C#, <a href="https://www.lua.org/">Lua</a>, Visual Basics (VBA), <a href="http://www.plcdev.com/book/export/html/9">PLC</a></td>
               </tr>
               <tr>
                 <th>Electronics</th> <td>8-bit AVR micro-controllers (Atmega 8/16/32), <a href="http://arduino.cc">Arduino</a>, <a></a>TI micro-controllers (MSP430)</a>, <a>Xilinx FPGA (NB3000 host board)</a>, <a href="http://papilio.cc/">Papilio FPGA (Papilio One 500K board)</a></td>
               </tr>
               <tr>
-                <th>Software developement</th> <td> <a href="https://developer.android.com/studio/">Android Studio</a>, <a href="https://visualstudio.microsoft.com/">Visual Studio</a>,  <a href="https://www.embarcadero.com/products/delphi/">Delphi</a></td>
+                <th>Software development</th> <td> <a href="https://developer.android.com/studio/">Android Studio</a>, <a href="https://visualstudio.microsoft.com/">Visual Studio</a>,  <a href="https://www.embarcadero.com/products/delphi/">Delphi</a>, <a href="https://www.3ds.com/products-services/catia/products/controlbuild/">ControlBuild</a>, <a href="http://www.ni.com/en-sg/shop/labview/labview-details.html">NI LabVIEW</a></td>
               </tr>
               <tr>
-                <th>Operating Systems</th><td>Windows and Linux(RHEL Server Clustering and Storage Array Networks)</td>
+                <th>Operating Systems</th><td>Windows and Linux</td>
               </tr>
             </table>
           </section>
           <hr class="separator" />
           <section id="work">
             <h3>Work Experience</h3>
-              <h5>Software Designer at ALSTOM</h5>
+              <h5>Software Designer at ALSTOM (July 2016 - Present)</h5>
               <ul>
                 <li>Collaborated with designers in developing embedded systems software for ERTMS by applying key principles of computer engineering and embedded systems at ALTOM Belgium.</li>
 				<li>Implemented enhancements in Maintenance Support System for URBALIS by applying key principles of programing and code analysis.</li>
 				<li>Delivered software solutions consistent with the product roadmap and released plan milestones.</li>
+				<li>Key learnings: Delphi | Web Application Development | JAVA Spring framework | Server Clustering | Storage Array Networks | RHEL | Software Architecture | C# (Visual Studio) | Lua | Visual Basics (VBA)</li>
+              </ul>
+			  <h5>Intern at ALSTOM (May 2015 - July 2015)</h5>
+              <ul>
+                <li>Designed and developed Simulation of TCMS Low Voltage Control Logics</li>
+				<li>Key learnings: ControlBuild | NI LabVIEW | NI PXI cards | Train control</li>
               </ul>
 		  </section>
 		  <hr class="separator" />
@@ -130,7 +136,7 @@
 		  <h5>Organized and Conducted various workshops </h5>
 		  <ul>  
 			<li><b>Workshop on Android Application Development and Embedded systems for students:</b></li>
-		    <p> As a motive to teach underprivileged students and share knowledge on android application developement and embedded systems, I organized and conducted 2 workshops. A 3 day workshop for over 60+ students at College of Engineering, Guindy and a 4 day workshop at Knowledge Institute of Technology, Salem. In which me and my team provided them with hands-on experience in Arduino and Android Application Development.</p>
+		    <p> As a motive to teach underprivileged students and share knowledge on android application development and embedded systems, I organized and conducted 2 workshops. A 3 day workshop for over 60+ students at College of Engineering, Guindy and a 4 day workshop at Knowledge Institute of Technology, Salem. In which me and my team provided them with hands-on experience in Arduino and Android Application Development.</p>
 			<div class="row"><div class="span6"><img src="img/cyber_KIOT1.jpg" class="img-rounded" align="center" /></div></div></li>
 			</ul>
 		   </section>
