site fifth build
site fifth build

--- a/resume.html
+++ b/resume.html
@@ -80,17 +80,14 @@
 			<h5>Texas Instruments Innovation Challenge India Design Contest 2015</h5>
             <p>Top 86 semi-finalist from 1209 teams <a href= "http://e2e.ti.com/group/universityprogram/w/contests/2436.contest-winners.aspx"> Semi-finalist, Texas Instruments Innovation Challenge India Design Contest 2015 </a> among over 1200 participating teams from all over the country competing in various fields and technologies of Electronics</p>
              <div class="row">
-              <div class="span5"><img src="img/ti.JPG" class="img-rounded"/></div>
-              </div>
-              <div class="row">
               <div class="span5">
 				<video width="700" height="400" controls>
 					<source src="img/ti idc video.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
 			  </div>
-              </div>
-              <br>
+             </div>
+             <br>
 			<h5>Sangam, Pragyan 2014</h5>
 			<p>Sangam 2014 Second Runner-up, Sangam Pragyan - 2014 </a> among over 300 participating teams competing in various fields and technologies</p>
 			
@@ -101,7 +98,7 @@
             <h3>Technical Skills</h3>
             <table class="table table-bordered table-hover">
               <tr>
-                <th>Languages</th> <td>JAVA, C, C++,<a href="http://www.mathworks.in/products/matlab/">MATLAB</a>, Embedded C, C#, <a href="https://www.lua.org/">Lua</a>, Visual Basics (VBA), <a href="http://www.plcdev.com/book/export/html/9">PLC</a></td>
+                <th>Languages</th> <td>JAVA, C, C++, Python, <a href="http://www.mathworks.in/products/matlab/">MATLAB</a>, Embedded C, C#, <a href="https://www.lua.org/">Lua</a>, Visual Basics (VBA), <a href="http://www.plcdev.com/book/export/html/9">PLC</a></td>
               </tr>
               <tr>
                 <th>Electronics</th> <td>8-bit AVR micro-controllers (Atmega 8/16/32), <a href="http://arduino.cc">Arduino</a>, <a></a>TI micro-controllers (MSP430)</a>, <a>Xilinx FPGA (NB3000 host board)</a>, <a href="http://papilio.cc/">Papilio FPGA (Papilio One 500K board)</a></td>
