--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <td>vtsnaathan [@] gmail [.] com</td> <td><a href="mailto:vtsnaathan@gmail.com" target="_blank"><i class="icon-envelope"></i></a></td>
                   </tr>
                   <tr>
-                    <td>s [.] thayumanan [@] ufl [.] edu </td> <td><a href="mailto:s.thayumanan@ufl.edu" target="_blank"><i class="icon-envelope"></i></a></td>
+                    <td>s.thayumanan [@] ufl [.] edu </td> <td><a href="mailto:s.thayumanan@ufl.edu" target="_blank"><i class="icon-envelope"></i></a></td>
                   </tr>
                   <tr>
                     <td>+91-895 191 3678</td> <td><i class="icon-signal"></i></td>
