--- a/resume.html
+++ b/resume.html
@@ -101,7 +101,7 @@
                 <th>Languages</th> <td>JAVA, C, C++, Python, <a href="http://www.mathworks.in/products/matlab/">MATLAB</a>, Embedded C, C#, <a href="https://www.lua.org/">Lua</a>, Visual Basics (VBA), <a href="http://www.plcdev.com/book/export/html/9">PLC</a></td>
               </tr>
               <tr>
-                <th>Electronics</th> <td>8-bit AVR micro-controllers (Atmega 8/16/32), <a href="http://arduino.cc">Arduino</a>, <a></a>TI micro-controllers (MSP430)</a>, <a>Xilinx FPGA (NB3000 host board)</a>, <a href="http://papilio.cc/">Papilio FPGA (Papilio One 500K board)</a></td>
+                <th>Electronics</th> <td>AVR micro-controllers (Atmega 8/16/32), <a href="http://arduino.cc">Arduino</a>, <a></a>TI micro-controllers (MSP430)</a>, <a>Xilinx FPGA (NB3000 host board)</a>, <a href="http://papilio.cc/">Papilio FPGA (Papilio One 500K board)</a></td>
               </tr>
               <tr>
                 <th>Software development</th> <td> <a href="https://developer.android.com/studio/">Android Studio</a>, <a href="https://visualstudio.microsoft.com/">Visual Studio</a>,  <a href="https://www.embarcadero.com/products/delphi/">Delphi</a>, <a href="https://www.3ds.com/products-services/catia/products/controlbuild/">ControlBuild</a>, <a href="http://www.ni.com/en-sg/shop/labview/labview-details.html">NI LabVIEW</a></td>
