--- a/resume.html
+++ b/resume.html
@@ -139,14 +139,14 @@
           <hr class="separator" />
           <section id="work">
             <h3>Work Experience</h3>
-              <h5>Software Designer at ALSTOM (July 2016 - Present)</h5>
+              <h5>Software Designer at <a href="http://www.alstom.com/">ALSTOM</a> (July 2016 - Present)</h5>
               <ul>
                 <li>Collaborated with designers in developing embedded systems software for ERTMS by applying key principles of computer engineering and embedded systems at ALTOM Belgium.</li>
 				<li>Implemented enhancements in Maintenance Support System for URBALIS by applying key principles of programing and code analysis.</li>
 				<li>Delivered software solutions consistent with the product roadmap and released plan milestones.</li>
 				<li>Key learnings: Delphi | Web Application Development | JAVA Spring framework | Server Clustering | Storage Array Networks | RHEL | Software Architecture | C# (Visual Studio) | Lua | Visual Basics (VBA)</li>
               </ul>
-			  <h5>Intern at ALSTOM (May 2015 - July 2015)</h5>
+			  <h5>Intern at <a href="http://www.alstom.com/">ALSTOM</a> (May 2015 - July 2015)</h5>
               <ul>
                 <li>Designed and developed Simulation of TCMS Low Voltage Control Logics</li>
 				<li>Key learnings: ControlBuild | NI LabVIEW | NI PXI cards | Train control</li>
