Site 10th build
Site 10th build

--- a/projects.html
+++ b/projects.html
@@ -56,9 +56,9 @@
              <li>
                 <a href="#SW">Smart Watch</a>
             </li>
-            <!--<li>
-                <a href="#HA">HOME AUTOMATION AND POWER MONITOR</a>
-            </li>-->
+            <li>
+                <a href="#HA">Home Automation</a>
+            </li>
             <li>
                 <a href="#FM">Wireless Non-Invasive<br>Flow Meter</a>
             </li>
@@ -248,22 +248,16 @@
 
 		<hr class="separator" />
 		
-		<!--<section id="HA">
+		<section id="HA">
 			<h3>HOME AUTOMATION AND POWER MONITOR</h3>
 			<h5>Guide:</h5><i><a href="https://www.nitt.edu/home/academics/departments/eee/people/faculty/aprof/moorthi/" target="_blank"><b>Dr.S.Moorthi</b></a>, Associate Professor, Department of Electrical and Electronics Engineering, NIT Trichy</i>
 			<h5>Goal</h5>
-				<p>To design, develop and construct a prototype of real-life working product - a Power metre with Home automation system using Papilio one FPGA and MSP430 microcontrollers</p>
+				<p>To design, develop and construct a prototype of real-life working product - a Power meter with Home automation system using Papilio one FPGA and MSP430 microcontrollers</p>
 			<h5>Abstract</h5>
 			<p>
-				Developed a centralised monitoring system, capable of monitoring status of home power consumption and also controlling appliances over Wireless Local Area Network using embedded systems.
+				Developed a centralized monitoring system, capable of monitoring status of home power consumption and also controlling appliances over Wireless Local Area Network using embedded systems.
 			</p>
-			<ul>
-			  <li>Developed a web application using HTML which displays the  status of appliances in real time. The protocol used for the Local Area Network was TCP/IP protocol.</li>
-			  <li>A <a href="http://arduino.cc/en/Main/ArduinoEthernetShield">Arduino</a> Ethernet shield was used as an interface between the router and microntroller to convert the data packets received from the server through TCP into 8-bit serial data which could be interpreted by a micro controller.</li>
-			  <li>A star topology was employed within microcontrollers each of which received control signal from any of clients in Local Area Network and performed triggering of relays controlling the  status of individual appliances. </li>
-			  <li>An effective electrical circuitry was designed such that the appliances had control  from both the web application and as well as from hardware switch.</li>
-			</ul>
-		</section>-->
+		</section>
 		
 		<hr class="separator" />
 
