Site 12th build
Site 12th build

--- a/resume.html
+++ b/resume.html
@@ -61,9 +61,7 @@
             <li>
                 <a href="#education">Education</a>
             </li>
-          
-            <li><a href="#acadAchievements">Scholastic achievements</a></li>
-          
+            <li><a href="#acadAchievements">Achievements</a></li>
             <li><a href="#skills">Technical Skills</a></li>
             <li><a href="#work">Work Experience</a></li>
             <li><a href="#teach">Teaching Experience</a></li>
@@ -90,7 +88,7 @@
           </section>
           <hr class="separator" />
           <section id="acadAchievements">
-            <h3>Scholastic Achievements and Awards</h3>
+            <h3>Achievements and Awards</h3>
 			<h5>Texas Instruments Innovation Challenge India Design Contest 2015</h5>
             <p>Top 86 semi-finalist from 1209 teams <a href= "http://e2e.ti.com/group/universityprogram/w/contests/2436.contest-winners.aspx"> Semi-finalist, Texas Instruments Innovation Challenge India Design Contest 2015 </a> among over 1200 participating teams from all over the country competing in various fields and technologies of Electronics</p>
              <div class="row">
