Site 13th build
Site 13th build

--- a/projects.html
+++ b/projects.html
@@ -46,11 +46,11 @@
         <div class="span3 sideNav">
           <ul id="resumeSideNavBar" class="nav nav-pills nav-stacked affix">
             <li class="nav-header">Academic Projects</li>
-            
             <li>
               <a href="#REDS">R-E-D-S</a>
             </li>
-            <li>
+            <li class="nav-header">Contests Entry Projects</li>
+			<li>
                 <a href="#TI">Wheelie</a>
             </li>
              <li>
@@ -59,6 +59,7 @@
             <!--<li>
                 <a href="#HA">Home Automation</a>
             </li>-->
+			<li class="nav-header">Projects Part of Courses</li>
             <li>
                 <a href="#FM">Wireless Non-Invasive<br>Flow Meter</a>
             </li>
