Site 14th build
Site 14th build

--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
 
         <div class="span9">
           <div class="page-header">
-            <h1>Projects<small> Academic, Courses and Contests</small></h1>
+            <h1>Projects<small> Academic, Contests and Courses</small></h1>
           </div>
 
         <section id="REDS">
