Site 15th Build
Site 15th Build

--- a/courses.html
+++ b/courses.html
@@ -55,8 +55,8 @@
         </div>
         <div class="span9">
           <section id="ufl">
-            <h3> University of Florida </h3>
-             <h5> Master of Science, Electrical and Computer Engineering (Starting Fall 2018)</h5>
+            <h3><a href="https://www.ece.ufl.edu/"><p style="text-decoration:none">University of Florida, Gainesville</p></a></h3>
+             <h5>Master of Science, Electrical and Computer Engineering (Starting Fall 2018)</h5>
              <table class="table table-bordered table-hover">
               <tr>
                 <th>Cumulative Grade Point Average</th><th>-</th>
@@ -77,7 +77,7 @@
 			</table>
           </section>
           <section id="nitt">
-            <h3>National Institute of Technology, Trichy</h3>
+            <h3><a href="https://www.nitt.edu/home/academics/departments/eee/" style="background:none" target="_blank">National Institute of Technology, Tiruchirappalli</a></h3>
             <h5>Bachelor of Technology, Electrical and Electronics Engineering (Aug 2012 - May 2016)</h5>
             <table class="table table-bordered table-hover">
               <tr>
