Site 16th Build
Site 16th Build

--- a/resume.html
+++ b/resume.html
@@ -127,10 +127,8 @@
               <ul>
                 <li>Collaborated with designers in developing embedded systems software for ERTMS by applying key principles of computer engineering and embedded systems at ALTOM Belgium.</li>
 				<li>Implemented enhancements in an ALSTOM specific product by applying key principles of programing and code analysis.</li>
-				<li>This ALSTOM specific product has web application , Storage Array Network, Server Clustering based on Linux and server hardware interfaces</li>
+				<li>This ALSTOM specific product has web application , Storage Area Network, Server Clustering based on Linux and server hardware interfaces</li>
 				<li>Delivered software solutions consistent with the product roadmap and released plan milestones.</li>
-				<!--<li>Key learnings:</li>
-				<table><tr>Software Architecture | Linux Server Clustering | Storage Array Networks | Lua </tr><tr>Web Application Development | JAVA Spring framework | C# (Visual Studio) | Delphi<tr></table>-->
 				<table class="table table-bordered table-hover">
 				  <tr>
 					<th colspan="3">Key learnings</th>
@@ -138,7 +136,7 @@
 				  <tr>
 					<td>Software Architecture</td>
 					<td>Linux Server Clustering</td>
-					<td>Storage Array Networks</td>
+					<td>Storage Area Networks</td>
 					<td>Lua</td>
 				  </tr>
 				  <tr>
@@ -210,7 +208,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-43264580-1', 'kowshick.in');
+  ga('create', 'UA-43264580-1', 'sattanaathan.in');
   ga('send', 'pageview');
 
 </script>
