--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   </tr>
                 </table>
               <div>
-                <!-- <h5>Resume</h5> -->
+                <h5>Resume</h5>
                 <table class="table table-bordered table-hover">
                  
                   <tr>
@@ -81,9 +81,6 @@
 				  <tr>
 					<td>PDF version</td> <td><a href="files/Sattanaathan_Thayumanan_Resume.pdf" download>Download the pdf</a></object></td>
 				  </tr>
-                  <!-- <tr>
-                    <td>Downloadable version</td> <td><a href="SiddharthSwaminathan-Resume.pdf"><i class="icon-file"></i></a></td>
-                  </tr> -->
                 </table>
               </div>
 			  <div>
@@ -118,7 +115,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-43264580-1', 'kowshick.in');
+  ga('create', 'UA-43264580-1', 'sattanaathan.in');
   ga('send', 'pageview');
 
 </script>
