Site 17th Build
Site 17th Build

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   </tr>
                 </table>
               <div>
-                <h5>Resume</h5>
+                <h4>Resume</h4>
                 <table class="table table-bordered table-hover">
                  
                   <tr>
@@ -85,10 +85,8 @@
               </div>
 			  <div>
                 <!-- <h5>Contact</h5> -->
+				<h4>Contact</h4>
                 <table class="table table-bordered table-hover">
-                  <tr>
-                    <th>Contact</th>
-                  </tr>
                   <tr>
                     <td>vtsnaathan [@] gmail [.] com</td> <td><a href="mailto:vtsnaathan@gmail.com" target="_blank"><i class="icon-envelope"></i></a></td>
                   </tr>
