Site 18th Build
Site 18th Build

--- a/projects.html
+++ b/projects.html
@@ -294,8 +294,9 @@
 			</p>
 			<h5>Implementation</h5>
 			<ul>
-			  <li>Developed an android application which displays the real-time Voltage, overall load (Current) and Power.</li>
-			  <li>The real-time power is used to plot a graph between Power and Time.</li>
+			  <li>Developed an android application which displays the real-time Voltage, overall load (Current), power factor and Power.</li>
+			  <li>Zero crossing circuit has been used for calculating power factor</li>
+			  <li>The real-time power is used to plot a graph between Power and Time, Power factor and Time.</li>
 			  <li>This data can be used to identify the spikes and surges vs the time.</li>
 			  <li>This data can also be used to regulate the power consumption.</li>
 			</ul>
