Commit courses and resume webpage update
Commit courses and resume webpage update

--- a/courses.html
+++ b/courses.html
@@ -59,8 +59,9 @@
              <h5>Master of Science, Electrical and Computer Engineering (Starting Fall 2018)</h5>
              <table class="table table-bordered table-hover">
               <tr>
-                <th>Cumulative Grade Point Average</th><th>-</th>
+                <th>Cumulative Grade Point Average</th><th>3.66/4</th>
               </tr>
+			  <tr>Expected Graduation: May 2020</tr>
               </table>
           </section>
           <section id="coursework">
@@ -73,6 +74,11 @@
 				<td>Principles of Computer System Design</td>
 				<td>Reconfigurable Computing</td>
 				<td>Computer Architecture</td>
+			  </tr>
+			  <tr>
+				<td>Advanced Systems Programming</td>
+				<td>Virtual Computers</td>
+				<td>Automotive Safety and Security</td>
 			  </tr>
 			</table>
           </section>
