--- a/resume.html
+++ b/resume.html
@@ -63,11 +63,11 @@
                 <th>Program</th> <th>Major</th> <th>Institution</th>  <th>% / CGPA</th> <th> Year of completion </th>
               </tr>
                <tr>
-                <td>Master of Science (MS)</td><td>Computer Engineering</td> <td><a href="https://www.ece.ufl.edu/"><p style="text-decoration:none">University of Florida, Gainesville</p></a></td> <td>-</td> <td>Starting Fall 2018</td>
+                <td>Master of Science (MS)</td><td>Computer Engineering</td> <td><a href="https://www.ece.ufl.edu/"><p style="text-decoration:none">University of Florida, Gainesville</p></a></td> <td>3.66/4</td> <td>May 2020 (Expected)</td>
               </tr>
               
               <tr>
-                <td>Bachelor of Technology (B.Tech)</td><td>Electrical and Electronics</td><td><a href="https://www.nitt.edu/home/academics/departments/eee/" style="background:none" target="_blank">National Institute of Technology, Tiruchirappalli</a></td> <td>7.20/10 <br></td> <td>2016</td>
+                <td>Bachelor of Technology (B.Tech)</td><td>Electrical and Electronics</td><td><a href="https://www.nitt.edu/home/academics/departments/eee/" style="background:none" target="_blank">National Institute of Technology, Tiruchirappalli</a></td> <td>7.20/10 <br></td> <td>May 2016</td>
               </tr>
             </table>
             
@@ -123,7 +123,26 @@
           <hr class="separator" />
           <section id="work">
             <h3>Work Experience</h3>
-              <h5>Software Designer at <a href="http://www.alstom.com/">ALSTOM</a> (July 2016 - Present)</h5>
+			  <h5>Graduate Research Assistant at <a href="https://www.ece.ufl.edu/">University of Florida</a> (Oct 2018 - Present)</h5>
+              <ul>
+                <li>Working on hardware-software co-validation research targeting firmware validations and Co-operative Adaptive Cruise Control research under the guidance of Professor Dr. Sandip Ray</li>
+				<table class="table table-bordered table-hover">
+				  <tr>
+					<th colspan="3">Key learnings</th>
+				  </tr>
+				  <tr>
+					<td>Formal Verification</td>
+					<td>JasperGold</td>
+					<td>Firmware Validation</td>
+				  </tr>
+				  <tr>
+					<td>Computer Architecture</td>
+					<td>Automotive Safety and Security</td>
+					<td>Co-operative Adaptive Cruise Control</td>
+				  </tr>
+				</table>
+              </ul>
+              <h5>Software Designer at <a href="http://www.alstom.com/">ALSTOM</a> (July 2016 - July 2018)</h5>
               <ul>
                 <li>Collaborated with designers in developing embedded systems software for ERTMS by applying key principles of computer engineering and embedded systems at ALTOM Belgium.</li>
 				<li>Implemented enhancements in an ALSTOM specific product by applying key principles of programing and code analysis.</li>
