Commit contact and index webpage update
Commit contact and index webpage update

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                     <td>s [.] thayumanan [@] ufl [.] edu </td> <td><a href="mailto:s.thayumanan@ufl.edu" target="_blank"><i class="icon-envelope"></i></a></td>
                   </tr>
                   <tr>
-                    <td>+91-895 191 3678</td> <td><i class="icon-signal"></i></td>
+                    <td>+1 (352) 284 9712</td> <td><i class="icon-signal"></i></td>
                   </tr>
                 </table>
                 <table class="table table-bordered table-hover">
@@ -64,7 +64,9 @@
                     <th><i class="icon-home"></i> Address</th>
                   </tr>
                   <tr>
-                    <td>C-6, Cr. Radhakrishnan Street, Block-12, Neyveli T.S, Tamil Nadu, India 607803</td>
+                    <td>4000 Southwest 37 Boulevard, Gainesville, FL, USA</td>
+					<td>Apartment number: 911</td>
+					<td>Zip code: 32608</td>
                   </tr>
                 </table>
               </div>
