--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <td>s [.] thayumanan [@] ufl [.] edu </td> <td><a href="mailto:s.thayumanan@ufl.edu" target="_blank"><i class="icon-envelope"></i></a></td>
                   </tr>
                   <tr>
-                    <td>+91-895 191 3678</td> <td><i class="icon-signal"></i></td>
+                    <td>+1 (352) 284 9712</td> <td><i class="icon-signal"></i></td>
                   </tr>
                 </table>
               </div>
