--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-  <title>Sattanaathan Thayumanan</title>
-  <!-- Bootstrap -->
-  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="bootstrap/css/other.css" rel="stylesheet">
-  <!-- Enable fluid response -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-  <!-- <link href="assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
+    <title>Sattanaathan Thayumanan</title>
+    <!-- Bootstrap -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/css/other.css" rel="stylesheet">
+    <!-- Enable fluid response -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <!-- <link href="assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
 
-  <script src="bootstrap/js/jquery-latest.js"></script>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
-  <script type="text/javascript">
+    <script src="bootstrap/js/jquery-latest.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <!--script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-10620514-6']);
     _gaq.push(['_trackPageview']);
@@ -22,122 +22,126 @@
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
-  </script>
+  </script-->
 </head>
 
 <body data-spy="scroll" data-target=".sideNav">
-  <div class="navbar navbar-fixed-top navbar-inverse">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="brand" href="index.html">Sattanaathan Thayumanan</a>
-        <ul class="nav" id="mainTabs">
-          <li class="active"><a href="index.html"><i class="icon-home icon-white"></i> Home</a></li>
-          <li><a href="projects.html"><i class="icon-cog icon-white"></i> Projects</a></li>
-          <li><a href="resume.html"><i class="icon-list-alt icon-white"></i> Resume</a></li>
-          <li><a href="courses.html"><i class="icon-book icon-white"></i> Academics</a></li>
-          <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li>
+    <div class="navbar navbar-fixed-top navbar-inverse">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="brand" href="index.html">Sattanaathan Thayumanan</a>
+                <ul class="nav" id="mainTabs">
+                    <li class="active"><a href="index.html"><i class="icon-home icon-white"></i> Home</a></li>
+                    <li><a href="projects.html"><i class="icon-cog icon-white"></i> Projects</a></li>
+                    <li><a href="resume.html"><i class="icon-list-alt icon-white"></i> Resume</a></li>
+                    <li><a href="courses.html"><i class="icon-book icon-white"></i> Academics</a></li>
+                    <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li>
 
-          <!-- <li><a href="#">Link</a></li> -->
-        </ul>
-      </div>
+                    <!-- <li><a href="#">Link</a></li> -->
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
-  <!-- Home content -->
-  <div id="home" class="container">
-    <div class="row">
-      <div class="span3 sideNav">
-        <!--Sidebar content-->
-        <!--<ul id="homeSideNav" class="nav nav-pills nav-list nav-stacked affix">
+    <!-- Home content -->
+    <div id="home" class="container">
+        <div class="row">
+            <div class="span3 sideNav">
+                <!--Sidebar content-->
+                <!--<ul id="homeSideNav" class="nav nav-pills nav-list nav-stacked affix">
             <li class="active">
                 <a href="#aboutme">About me</a>
             </li>
           </ul>-->
-      </div>
-      <div class="span9">
-        <!--Body content-->
-        <div id="aboutme" class="row">
-          <div class="span5">
-            <h3>Sattanaathan Thayumanan</h3>
-            <p>
-              Master of Science<br>
-              <a href="http://www.ece.ufl.edu/" target="_blank"><b>Electrical and Computer Engineering</b></a><br>
-              <a href="http://www.ufl.edu/" target="_blank">University of Florida, Gainesville</a><br>
-            </p>
-
-            <br>
-
-            <h4>Research interests</h4>
-            <p>My primary interest is in the field of <strong><a href="http://www.ece.ufl.edu/computerengineering"
-                  target="_blank">Computer Engineering</a></strong>, i.e., Computer Systems Design, Embedded Systems,
-              Autonomous Driving and Safety Critical Systems.</p>
-            <table class="table table-bordered table-hover">
-              <tr>
-                <th colspan="3">Computer Engineering(Major)</th>
-              </tr>
-              <tr>
-                <td>Principles of Computer System Design</td>
-                <td>Virtual Computers</td>
-                <td>Automotive Safety and Security</td>
-              </tr>
-              <tr>
-                <td>Advanced Systems Programming</td>
-                <td>Distributed Operating System Principles</td>
-                <td>Image Processing and Computer Vision</td>
-              </tr>
-            </table>
-            <div>
-              <h4>Resume</h4>
-              <table class="table table-bordered table-hover">
-
-                <tr>
-                  <td>Online version</td>
-                  <td><a href="resume.html"><i class="icon-list-alt"></i></a></td>
-                </tr>
-                <tr>
-                  <td>PDF version</td>
-                  <td><a href="files/Sattanaathan_Thayumanan_Resume.pdf" download>Download the pdf</a></object></td>
-                </tr>
-              </table>
             </div>
-            <div>
-              <!-- <h5>Contact</h5> -->
-              <h4>Contact</h4>
-              <table class="table table-bordered table-hover">
-                <tr>
-                  <td>vtsnaathan [@] gmail [.] com</td>
-                  <td><a href="mailto:vtsnaathan@gmail.com" target="_blank"><i class="icon-envelope"></i></a></td>
-                </tr>
-                <tr>
-                  <td>s [.] thayumanan [@] ufl [.] edu </td>
-                  <td><a href="mailto:s.thayumanan@ufl.edu" target="_blank"><i class="icon-envelope"></i></a></td>
-                </tr>
-                <tr>
-                  <td>+1 (352) 284 9712</td>
-                  <td><i class="icon-signal"></i></td>
-                </tr>
-              </table>
+            <div class="span9">
+                <!--Body content-->
+                <div id="aboutme" class="row">
+                    <div class="span5">
+                        <h3>Sattanaathan Thayumanan</h3>
+                        <p>
+                            Master of Science<br>
+                            <a href="http://www.ece.ufl.edu/" target="_blank"><b>Electrical and Computer Engineering</b></a><br>
+                            <a href="http://www.ufl.edu/" target="_blank">University of Florida, Gainesville</a><br>
+                        </p>
+
+                        <br>
+
+                        <h4>Research interests</h4>
+                        <p>My primary interest is in the field of <strong><a href="http://www.ece.ufl.edu/computerengineering"
+                  target="_blank">Computer Engineering</a></strong>, i.e., Computer Systems Design, Embedded Systems, Autonomous Driving and Safety Critical Systems.</p>
+                        <table class="table table-bordered table-hover">
+                            <tr>
+                                <th colspan="3">Computer Engineering(Major)</th>
+                            </tr>
+                            <tr>
+                                <td>Principles of Computer System Design</td>
+                                <td>Virtual Computers</td>
+                                <td>Automotive Safety and Security</td>
+                            </tr>
+                            <tr>
+                                <td>Advanced Systems Programming</td>
+                                <td>Distributed Operating System Principles</td>
+                                <td>Image Processing and Computer Vision</td>
+                            </tr>
+                        </table>
+                        <div>
+                            <h4>Resume</h4>
+                            <table class="table table-bordered table-hover">
+
+                                <tr>
+                                    <td>Online version</td>
+                                    <td><a href="resume.html"><i class="icon-list-alt"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td>PDF version</td>
+                                    <td><a href="files/Sattanaathan_Thayumanan_Resume.pdf" download>Download the pdf</a></object>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div>
+                            <!-- <h5>Contact</h5> -->
+                            <h4>Contact</h4>
+                            <table class="table table-bordered table-hover">
+                                <tr>
+                                    <td>vtsnaathan [@] gmail [.] com</td>
+                                    <td><a href="mailto:vtsnaathan@gmail.com" target="_blank"><i class="icon-envelope"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td>s [.] thayumanan [@] ufl [.] edu </td>
+                                    <td><a href="mailto:s.thayumanan@ufl.edu" target="_blank"><i class="icon-envelope"></i></a></td>
+                                </tr>
+                                <tr>
+                                    <td>+1 (352) 284 9712</td>
+                                    <td><i class="icon-signal"></i></td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="span3">
+                        <img src="bootstrap/img/informal_me.jpg" class="img-rounded" /><br>
+                        <p style="text-align:center">(That's me <i class="icon-arrow-up"></i>)</p>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="span3">
-            <img src="bootstrap/img/informal_me.jpg" class="img-rounded" /><br>
-            <p style="text-align:center">(That's me <i class="icon-arrow-up"></i>)</p>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
-  <script>
-    (function (i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-43264580-1', 'sattanaathan.in');
-    ga('send', 'pageview');
-
-  </script>
+        ga('create', 'UA-43264580-1', 'sattanaathan.in');
+        ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
