--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 
                         <br>
 
-                        <h4>Research interests</h4>
-                        <p>My primary interest is in the field of <strong><a href="http://www.ece.ufl.edu/computerengineering"
-                  target="_blank">Computer Engineering</a></strong>, i.e., Computer Systems Design, Embedded Systems, Autonomous Driving and Safety Critical Systems.</p>
+                        <h4>About</h4>
+                        <p>I am a computer engineer grad with 4+ years of experience split between designing and architecting software systems and automotive safety systems. I am very passionate about cars and IoT. My ideal new role would allow me to work
+                            closely with next-gen automotive systems and/or connected smart devices.</p>
                         <table class="table table-bordered table-hover">
                             <tr>
-                                <th colspan="3">Computer Engineering(Major)</th>
+                                <th colspan="3">Computer Engineering (Major)</th>
                             </tr>
                             <tr>
                                 <td>Principles of Computer System Design</td>
@@ -93,8 +93,8 @@
                                     <td><a href="resume.html"><i class="icon-list-alt"></i></a></td>
                                 </tr>
                                 <tr>
-                                    <td>PDF version</td>
-                                    <td><a href="files/Sattanaathan_Thayumanan_Resume.pdf" download>Download the pdf</a></object>
+                                    <td>Offline version</td>
+                                    <td><a href="files/Sattanaathan_Thayumanan_Resume.docx" download>Download</a></object>
                                     </td>
                                 </tr>
                             </table>
